fix: Add support for custom window controls on Linux and more information about the package being installed